Complete the applyMove function Complete the MoveDestinationVisitor class Fixed some data type error